@@ -1,3 +1,8 @@
+2014-03-22  Moritz Bunkus  <moritz@bunkus.org>
+
+        * mkvmerge: enhancement: improved file type detection speed for
+        text subtitle formats.
+
 2014-03-10  Moritz Bunkus  <moritz@bunkus.org>
 
         * mkvextract: bug fix: during the extraction of chapters, tags or
